src/snapshot_middleware/snapshots/test__script_with_meta.snap
---
source: src/snapshot_middleware/lua.rs
expression: instance_snapshot
---
snapshot_id: ~
metadata:
  ignore_unknown_instances: true
  instigating_source:
    Path: /foo.server.lua
  relevant_paths:
    - /foo.server.lua
name: foo
class_name: Script
properties:
  Source:
    Type: String
    Value: Hello there!
children: []
