src/snapshot_middleware/snapshots/test__server_from_imfs.snap
---
source: src/snapshot_middleware/lua.rs
expression: instance_snapshot
---
snapshot_id: ~
metadata:
  ignore_unknown_instances: false
  contributing_paths:
    - /foo.server.lua
name: foo
class_name: Script
properties:
  Source:
    Type: String
    Value: Hello there!
children: []
