src/snapshot_middleware/snapshots/test__server_from_vfs.snap
---
source: src/snapshot_middleware/lua.rs
expression: instance_snapshot
---
snapshot_id: ~
metadata:
  ignore_unknown_instances: false
  instigating_source:
    Path: /foo.server.lua
  relevant_paths:
    - /foo.server.lua
    - /foo.meta.json
  context:
    ignore_paths: []
name: foo
class_name: Script
properties:
  Source:
    Type: String
    Value: Hello there!
children: []
